# bisonrelay

./: .gitignore  .golangci.yml  README.md  go.mod  go.sum  goclean.sh
brclient/: TODO  appstate.go  brclient.conf.go  chatwindow.go  commands.go  commands_test.go  config.go  embedwidget.go  feedwin.go  formhelper.go  initialuseridstate.go  initstate.go  lnfundwallet.go  lnopenchannel.go  lnrequestrecv.go  log.go  main.go  mainwindow.go  messages.go  newpost.go  onboarding.go  pluginwidget.go  pluginwindow.go  postwin.go  rtdtconference.go  sendaudionotewin.go  setupwizard.go  shutdownstate.go  simplestore.go  start_onboarding.go  textareahelper.go  textinputhelper.go  textinputhelper_test.go  theme.go  theme_test.go  unlocklnscreen.go  util.go  util_test.go
brrtdtserver/: README.md  brrtdtserver.conf  conn.go  log.go  main.go  settings.go
brseeder/: appdata.go  config.go  main.go  signal.go  signal_syscall.go
brserver/: brserver.conf  demote.sh  main.go  promote.sh  settings.go
bruig/: README.md  TODO
bruig/flutterui/plugin/linux/: CMakeLists.txt  golib_plugin.cc
bruig/flutterui/plugin/linux/include/golib_plugin/: golib_plugin.h
client/: README.md  client.go  client_autokx.go  client_content.go  client_filters.go  client_groupchat.go  client_kx.go  client_kxsearch.go  client_onboard.go  client_onchain.go  client_payments.go  client_plugin.go  client_posts.go  client_resources.go  client_rm_handlers.go  client_rtdt.go  client_sendq.go  client_test.go  client_transreset.go  doc.go  e2e-legacy-ln-server.conf  e2e_legacy_ln_test.go  errors.go  errors_test.go  (+13 more)
(+626 files in other folders)
